--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kenji Longid | Developer</title>
-</head>
-
-<body>
-  <h1>Kenji Longid</h1>
-  <div>
-    In development...
-  </div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kenji Longid | Developer</title>
+    <link rel="stylesheet" type="text/css" href="./src/output.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
